--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://amdorma.github.io/tarokka-reading/",
   "name": "tarokka-reading",
   "version": "0.1.0",
   "private": true,
@@ -12,7 +13,8 @@
     "web-vitals": "^1.1.2",
     "lodash-es": "4.17.11",
     "react-spring": "9.0.0-beta.3",
-    "react-use-gesture": "5.0.0"
+    "react-use-gesture": "5.0.0",
+    "gh-pages": "^3.1.0",
   },
   "scripts": {
     "start": "react-scripts start",
